k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-kube-app
  namespace: django-kube-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-kube-app
  template:
    metadata:
      labels:
        app: django-kube-app
    spec:
      containers:
      - name: django-kube-app
        image: saurabhshr/django-kube-app:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health/live/
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/ready/
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
