k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-kube-app
  namespace: django-kube-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: django-kube-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-kube-app
            port:
              number: 80
